--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1912,4 +1912,114 @@ Step by step guide to become a AI/ML scientist.
         The HR Round is based on Atlassian core values. Here the interviewers check if the candidate is culturally fit or not for the organization.\n\n
         <b>NOTE:</b> The number of Technical rounds at Atlassian may vary from 2-3.\n
     </string>
+
+
+    <string name="oracle_about_heading">About ORACLE</string>
+    <string name="oracle_about_content">
+        <b>=></b> The company was founded in 1977, headquartered Redwood Shores, California.\n
+        <b>=></b> Oracle a multinational computer technology specializes primarily in developing and marketing database software and technology, cloud engineered system. \n
+        <b>=></b> According to Oracle latest financial reports the companys current revenue (TTM) is $47.95 B. In 2022 the company made a revenue of $46.07 B an increase over the years 2021 revenue that were of $41.40 B. \n
+    </string>
+    <string name="oracle_hiring_details_heading">Recruitment process at ORACLE</string>
+    <string name="oracle_hiring_details_content">
+        <b>=> Recruitment Process :</b>\n
+        Oracle conducts 3-4 rounds to select freshers for Software Engineer in their organisation.\n
+        &#160;&#160;&#160;&#160;* Online Test
+        &#160;&#160;&#160;&#160;* Technical Interview Round 1
+        &#160;&#160;&#160;&#160;* Technical Interview Round 2
+        &#160;&#160;&#160;&#160;* HR Round
+
+        <b>=> ORACLE Eligibility Criteria :</b>\n
+        &#160;&#160;&#160;&#160;* Candidate must have consistent academic records from class X onwards.\n
+        &#160;&#160;&#160;&#160;* Must have cleared all the subjects with no backlogs.\n\n
+
+        <b>=> Online Assessment :</b>\n
+        It is an online test round where MCQ questions ranging from verbal, quantitative to core subjects such as DS, Networking, OOPS, Database are asked. Practice is required as number of questions are more.\n\n
+        <b>=> Technical Round 1 :</b>\n
+        This is a coding round where generally 2 questions are given. The concept of Data Structure must be cleared as the questions are tough.\n\n
+        <b>=> Technical Round 2 :</b>\n
+        It is a personal interview round where questions based on data structure asked and some questions from resume. Some puzzle based questions are also asked.\n\n
+        <b>=> HR Round/ Interview :</b>\n
+        Some Behavioral questions and Normal Hr questions are asked here.\n\n
+    </string>
+
+
+    <string name="redhat_about_heading">About REDHAT</string>
+    <string name="redhat_about_content">
+        <b>=></b> Red Hat is a United States-based IBM subsidiary that sells open-source software to businesses.\n
+        <b>=></b> Red Hat was established in 1993 and has offices all around the world in addition to its corporate headquarters in Raleigh, North Carolina.\n
+        <b>=></b> Red Hat offers storage, platforms for operating systems, middleware, applications, and management tools as well as support, consulting, training, and support services.\n
+    </string>
+    <string name="redhat_hiring_details_heading">Recruitment process at REDHAT</string>
+    <string name="redhat_hiring_details_content">
+        <b>=> Recruitment Process :</b>\n
+        &#160;&#160;&#160;&#160;* Online Assessment\n
+        &#160;&#160;&#160;&#160;* Technical Round 1\n
+        &#160;&#160;&#160;&#160;* Technical Round 2\n
+        &#160;&#160;&#160;&#160;* Tech/ Managerial Round\n
+        &#160;&#160;&#160;&#160;* HR\n\n
+
+        <b>=> RED HAT Eligibility Criteria :</b>\n
+        &#160;&#160;&#160;&#160;* BE/BTech,MCA,BCA,MTech\n\n
+        <b>=> Online Assessment :</b>\n
+        Online assessment tests may include numerical reasoning, inductive logical thinking, verbal reasoning assessments, Coding questions on Data Structures and Algorithms personality questionnaires, and much more besides.\n\n
+        <b>=> Technical Round 1 :</b>\n
+        Questions are asked on Data Structure and Algorithms Easy – Medium Level.\n\n
+        <b>=> Technical Round 2 :</b>\n
+        Discussion on Projects and technologies used in detail, Computer Science Concepts, and Some questions on Programming Languages.\n\n
+        <b>=> Tech/ Managerial Round :</b>\n
+        System Design Questions and Behavioral Questions.\n\n
+        <b>=> HR Round/ Interview :</b>\n
+        Some Behavioral questions and Normal Hr questions are asked here.\n\n
+    </string>
+    
+    
+    <string name="twilio_about_heading">About TWILIO</string>
+    <string name="twilio_about_content">
+        <b>=></b> Twilio was founded on 13 March 2008 and is based in San Francisco, California, United States.\n
+        <b>=></b> Twilio Inc (Twilio) is a provider of cloud communications platforms. Twilio enable developers to build, scale and operate real-time communications within software applications.\n
+        <b>=></b> Twilio cash on hand for the quarter ending March 31, 2023 was $3.945B, a 24.47% decline year-over-year. Twilio cash on hand for 2022 was $4.155B, a 22.45% decline from 2021. Twilio cash on hand for 2021 was $5.358B, a 76.26% increase from 2020.\n
+    </string>
+    <string name="twilio_hiring_details_heading">Recruitment process at TWILIO</string>
+    <string name="twilio_hiring_details_content">
+        <b>=> Recruitment Process :</b>\n
+        &#160;&#160;&#160;&#160;* Hackerrank Test\n
+        &#160;&#160;&#160;&#160;* Technical Round 1 and 2\n
+        &#160;&#160;&#160;&#160;* Managerial Round\n
+        &#160;&#160;&#160;&#160;* Behavioral round\n\n
+
+        <b>=> Hackerrank Test :</b>\n
+        It has 4 coding questions, 2 easy, and 2 medium. It is expected to solve at least 3 coding questions to get shortlisted for further rounds.\n\n
+        <b>=> Tech screening :</b>\n
+        One of the senior software engineer in the organization can be expected to take this interview. Questions from Java OOPS and coding questions are asked. System design questions like design a system like red bus app can be expected.\n\n
+        <b>=> Managerial Round :</b>\n
+        It is taken by one of the senior employees or manager. Questions about the projects and some behavioral questions are asked.\n\n
+        <b>=> Behavioral round :</b>\n
+        It is taken by a bar raiser. More than 10 behavioral questions can be asked. Better to answer questions by using the STAR approach.\n
+    </string>
+
+
+    <string name="media_dot_net_about_heading">About MEDIA.NET</string>
+    <string name="media_dot_net_about_content">
+        <b>=></b> Media.net is a technology company with over 1250 employees committed to developing innovative monetization products for digital publishers and advertisers.\n
+        <b>=></b> It is the second-largest contextual advertising network in the world. It is also one of the TOP 5 largest ad tech companies by market cap.\n
+    </string>
+    <string name="media_dot_net_hiring_details_heading">Recruitment process at MEDIA.NET</string>
+    <string name="media_dot_net_hiring_details_content">
+        &#160;&#160;&#160;&#160;* Round 1: Online Assessment\n
+        &#160;&#160;&#160;&#160;* Round 2: Technical Interview 1\n
+        &#160;&#160;&#160;&#160;* Round 3: Technical Interview 2\n
+        &#160;&#160;&#160;&#160;* Round 4: HR round\n\n
+
+        <b>=> MEDIA.NET Eligibility Criteria :</b>\n
+        Bachelor/ Masters in Computer Science, or equivalent.\n\n
+        <b>=> Online Assessment :</b>\n
+        There will be an online MCQ test including topics General aptitude, computer network, DBMS, OS, Data structure and algorithms, and coding test 2-3 easy to medium level problems.\n\n
+        <b>=> Technical Interview 1 :</b>\n
+        In this round, The interviewer asks to perform tasks like networking tasks and to solve medium-level DSA coding problems.\n\n
+        <b>=> Technical Interview 2 :</b>\n
+        Questions from CS fundamentals, Discussion on previously performed projects, and low-level system designing may be asked.\n\n
+        <b>=> HR Round :</b>\n
+        Some Behavioral questions and Normal Hr questions are asked here.\n\n
+    </string>
 </resources>
